# librime-qjs

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  action-install.bat  action-install.sh  readme.md
.githooks/: pre-commit
.github/workflows/: build-ci.yml  ci.yml  commit-ci.yml  linux-build.yml  macos-build.yml  release-ci.yml  windows-build.yml
benchmark/: CMakeLists.txt
benchmark/dict/: dictionary_benchmark.cc  load_trie_benchmark.cc  map.hpp  trie_ext.hpp
contrib/: rime.d.ts
doc/: build-linux.md  build-macos.md  build-windows.md  plugin-dev-with-jsc.md  plugin-dev.cn.md  plugin-dev.en.md  readme-cn.md  readme.en.md
src/: main.cpp  module.cc  qjs_component.h  qjs_component.hpp  qjs_filter.cc  qjs_filter.h  qjs_helper.h  qjs_helpers.h  qjs_processor.cc  qjs_processor.h  qjs_translation.cc  qjs_translation.h  qjs_translator.cc  qjs_translator.h  trie.cc  trie.h
src/dicts/: dictionary.cc  dictionary.h  leveldb.cc  leveldb.h  leveldb.hpp  trie.cc  trie.h
src/engines/: common.h  engine_manager.h  for_each_macros.h  js_engine.h  js_exception.h  js_macros.h  js_traits.h  jscode_utils.hpp  qjs_macros.h  type_map.h
src/engines/javascriptcore/: javascriptcore_engine.h  jsc_code_loader.cc  jsc_code_loader.cpp  jsc_code_loader.h  jsc_engine_impl.cc  jsc_engine_impl.h  jsc_macros.h  jsc_string_raii.hpp
src/engines/quickjs/: quickjs_code_loader.cc  quickjs_code_loader.h  quickjs_engine.h  quickjs_engine_impl.cc  quickjs_engine_impl.h  quickjs_type_registry.h  quickjs_utils.h
src/gears/: qjs_filter.h  qjs_filter.hpp  qjs_module.cc  qjs_module.h  qjs_processor.cc  qjs_processor.h  qjs_translation.cc  qjs_translation.h  qjs_translator.cc  qjs_translator.h
src/helpers/: jsstring_raii.h  jsvalue_raii.h  jsvalue_raii.hpp  process_memory.h  qjs_environment.cc  qjs_environment.h  qjs_helper.cc  qjs_helper.h  qjs_macros.h
src/misc/: process_memory.hpp  system_info.hpp
src/patch/quickjs/: node_module_loader.c  node_module_loader.h  node_module_logger.cc
src/types/: environment.cc  environment.h  js_wrapper.h  jsvalue_raii.h  qjs_candidate.cc  qjs_candidate.h  qjs_candidate_iterator.h  qjs_commit_history.cc  qjs_commit_history.h  qjs_commit_record.cc  qjs_commit_record.h  qjs_config.cc  qjs_config.h  qjs_config_item.cc  qjs_config_item.h  qjs_config_list.cc  qjs_config_list.h  qjs_config_map.cc  qjs_config_map.h  qjs_config_value.cc  qjs_config_value.h  qjs_context.cc  qjs_context.h  qjs_engine.cc  qjs_engine.h  qjs_environment.h  qjs_iterator.h  qjs_key_event.cc  qjs_key_event.h  qjs_leveldb.h  qjs_macros.h  qjs_notifier.cc  qjs_notifier.h  qjs_notifier_connection.cc  qjs_notifier_connection.h  qjs_os_info.h  qjs_preedit.cc  qjs_preedit.h  qjs_schema.cc  qjs_schema.h  (+8 more)
tests/: .prettierrc  CMakeLists.txt  component.test.cpp  dict_data_helper.hpp  dictionary.test.cpp  fake_translation.h  fake_translation.hpp  filter.test.cpp  notifier.test.cpp  processor.test.cpp  rime-qjs-test-main.test.cpp  test_helper.h  test_helper.hpp  test_switch.h  translation.test.cpp  translator.test.cpp  trie.test.cpp  trie_data_helper.h  types.test.cpp
tests/benchmark/dict/: benchmark_helper.h  load_dict_benchmark.cc  load_map_benchmark.cc  load_trie_benchmark.cc  map.h  map.hpp  trie_ext.hpp
tests/experiment/: expand_macro.cc
tests/js/: .prettierrc  bundle.js  bundle.sh  fast_filter.iterator.js  fast_filter.js  filter_is_applicable.js  filter_test.js  help_menu.js  lazy_filter.js  node-modules.test.js  package.json  processor_test.js  search.filter.js  sort_by_pinyin.js  testutils.js  translator_no_return.js  translator_test.js  types_test.js
tests/js/lib/: string.js  trie.js
tests/jsc/: expose-class-to-js.test.cpp  load-bundled-plugin.test.cpp
tests/qjs/: expose-cpp-class.test.cpp  import-js-module.test.cpp  js-module-loader.h  report-js-error.test.cpp  vector-iterator.test.cpp
tests/qjs/js/: lib.js  main.js  node-modules.test.js  package-lock.json  runtime-error.js
tools/: check-api-coverage.js  clang-format.sh  clang-tidy.sh  expand-macro.sh  format-code.sh  package.json  update-version.bat  update-version.sh
